--- a/css/style.css
+++ b/css/style.css
@@ -8,4 +8,18 @@ ul, ol, li {
 a {
   text-decoration: none; }
 
+#header {
+  width: 100%;
+  position: absolute; }
+  #header .inner {
+    width: 100%;
+    height: 100px; }
+    #header .inner h1 {
+      position: absolute;
+      left: 0;
+      bottom: 15px; }
+      #header .inner h1 a {
+        font: bold 22px/1 "arial";
+        color: #444; }
+
 /*# sourceMappingURL=style.css.map */
