--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,22 @@
 @charset "utf-8";
 @import "reset";
 
+#header {
+    width: 100%;
+    position:absolute;
+    .inner {
+        width: 100%;
+        height: 100px;
+
+        h1 { 
+            position: absolute;
+            left: 0;
+            bottom: 15px;
+
+            a {
+                font: bold 22px/1 "arial";
+                color: #444;
+            }
+        }
+    }
+}
